--- a/ParkingLot.Web/ParkingLot.Web.csproj
+++ b/ParkingLot.Web/ParkingLot.Web.csproj
@@ -164,7 +164,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\jquery.timepicker.min.css" />
+    <Content Include="Content\datetimepicker.css" />
     <Content Include="Content\mobile.css" />
     <Content Include="Content\screen.css" />
     <Content Include="favicon.ico" />
@@ -176,15 +176,17 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\chart.bundle.min.js" />
     <Content Include="Scripts\Controllers\HomeController.js" />
+    <Content Include="Scripts\datetimepicker.js" />
+    <Content Include="Scripts\datetimepicker.templates.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.timepicker.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\moment.min.js" />
     <Content Include="Scripts\ParkingLotApp.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
