--- a/ParkingLot.Web.Tests/App.config
+++ b/ParkingLot.Web.Tests/App.config
@@ -5,7 +5,7 @@
 -->
 <configuration>
     <appSettings>
-
+      <add key="ApiUrl" value="api.url.from.the.app.settings" />
     </appSettings>
 
     <connectionStrings>
