--- a/ParkingLot.Web.Tests/ParkingLot.Web.Tests.csproj
+++ b/ParkingLot.Web.Tests/ParkingLot.Web.Tests.csproj
@@ -98,6 +98,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Builders\ChartDataBuilderTests.cs" />
+    <Compile Include="Models\ChartDataTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
